tests/snapshots/snapshot_map__snapshot_polyglot_map_budget_limited.snap
---
source: tests/snapshot_map.rs
expression: result
---
# Map: tests/fixtures/polyglot-project (depth 3)
Dockerfile (~20 tokens)
Makefile (~22 tokens)
src/
  App.java: App, main
  Button.res: Button, color, Theme, make
  Parser.hs: Token, tokenize, Parseable
  Store.res: Store, status, item, cart, user, action, localStorage_getItem, localStorage_s...
  app.ts: AppConfig, createApp, VERSION
  component.tsx: ButtonProps, Button, Badge
  core.py: Pipeline, __init__, run, create_pipeline
  engine.cpp (~62 tokens)
  helper.rb: StringHelper
  lib.c (~55 tokens)
  main.rs: Config, initialize, Status
  server.go: NewHandler, ServeHTTP
  utils.js: debounce, EventBus
